# copilot-plugin-manager

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cpm-reference.toml  cpm.toml  lefthook.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: catalog-refresh.yml  ci.yml  cicd.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  dev_setup.md  project_overview.md  quick_reference.md  style_and_conventions.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md  zen_analysis_setup.md
crates/cpm-cli/: Cargo.toml
crates/cpm-cli/src/: lib.rs  main.rs  progress.rs
crates/cpm-cli/src/commands/: add.rs  auth.rs  cache.rs  doctor.rs  init.rs  list.rs  lock.rs  mod.rs  overview.rs  remove.rs  reset.rs  run.rs  scope.rs  show.rs  status.rs  sync.rs  tree.rs  update.rs
crates/cpm-cli/tests/: cli_integration.rs
crates/cpm-core/: Cargo.toml
crates/cpm-core/src/: auth.rs  config.rs  doctor.rs  error.rs  external.rs  fetcher.rs  installer.rs  lib.rs  license.rs  paths.rs  plugin_delegate.rs  plugin_index.rs  project.rs  resolver.rs  source.rs  status.rs
crates/cpm-core/tests/: integration.rs
crates/cpm-types/: Cargo.toml
crates/cpm-types/src/: lib.rs
docs/: CREDITS.md  RELEASING.md  THEMES.md  USAGE.md
python/cpm/: __main__.py  _cli.py  py.typed
scripts/: branch.py  bump_version.py  check_broken_links.py  check_committed_toml.py  ci_version.py  generate_docs.py  refresh_catalog.py  smoke-awesome-copilot.sh
skills/alpha/: SKILL.md
src/copilot_plugin_manager/: __init__.py  catalog.py  catalog_docs.py  cli.py  completion.py  manager.py  models.py  paths.py  rendering.py  runner.py  state.py
src/copilot_plugin_manager/catalog_data/: __init__.py  agents.toml  entrypoints.toml  mcps.toml  plugins.toml  profiles.toml  repositories.toml  skills.toml  themes.toml
test/: test_catalog.py  test_catalog_docs.py  test_check_broken_links.py  test_manager.py  test_mcp.py  test_paths_and_state.py  test_refresh_catalog.py  test_runner_and_shell.py
tests/: test_cli.py  test_dev_scripts.py  test_manifest_guardrails.py
