[workspace]
members = [
    "crates/cpm-types",
    "crates/cpm-core",
    "crates/cpm-cli",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["cpm contributors"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Anselmoo/copilot-plugin-manager"

[workspace.dependencies]
# serialisation
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = { version = "0.8", features = ["parse", "display"] }
toml_edit   = "0.22"
indexmap    = { version = "2", features = ["serde"] }

# paths & time
camino   = { version = "1.1", features = ["serde1"] }
chrono   = { version = "0.4", features = ["serde"] }

# async / HTTP
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# error handling & display
thiserror  = "2.0"
miette     = { version = "7", features = ["fancy"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"

# diagnostics
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif          = "0.17"

# hashing
sha2 = "0.10"
hex  = "0.4"

# auth / keyring
keyring = "3"

# platform directories
dirs = "5"

# testing
tempfile = "3"
wiremock = "=0.6.4"
