[project]
name = "copilot-plugin-manager"
version = "0.2.1"
description = "Rust-first GitHub Copilot asset manager with a thin Python wrapper"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
keywords = [
  "agent",
  "agentic-workflow",
  "cli",
  "copilot",
  "github-copilot",
  "mcp",
  "package",
  "plugin",
  "python",
  "rust",
  "skill",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/Anselmoo/copilot-plugin-manager/blob/main/README.md"
Homepage = "https://github.com/Anselmoo/copilot-plugin-manager"
Issues = "https://github.com/Anselmoo/copilot-plugin-manager/issues"
Repository = "https://github.com/Anselmoo/copilot-plugin-manager"

[dependency-groups]
dev = [
  "poethepoet>=0.37,<0.38",
  "pytest>=8.3,<9",
  "pytest-cov>=7.1.0",
  "ruff>=0.15,<0.16",
  "tombi>=0.9.9",
  "ty>=0.0.1a18",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"


[tool.maturin]
bindings = "bin"
manifest-path = "crates/cpm-cli/Cargo.toml"
python-source = "python"
python-packages = ["cpm"]
module-name = "cpm"
strip = true
sdist-generator = "cargo"
include = [
  { path = "Cargo.toml", format = "sdist" },
  { path = "Cargo.lock", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "cpm.toml", format = "sdist" },
  { path = "crates/**", format = "sdist" },
  { path = "python/**", format = "sdist" },
  { path = "tests/**", format = "sdist" },
]
exclude = ["__pycache__", ".pytest_cache", ".ruff_cache", ".venv", "target"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
xfail_strict = true
filterwarnings = ["error"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ANN", # flake8-annotations
  "S",   # flake8-bandit (security)
  "N",   # pep8-naming
  "PT",  # flake8-pytest-style
  "RUF", # Ruff-specific rules
]
ignore = [
  "S603", # subprocess call — accepted pattern in this project
  "S607", # start process with partial path — accepted pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # assert is expected in tests
  "ANN",  # type annotations not required for tests
]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["cpm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["python/**/*.py", "tests/**/*.py"]
exclude = [".venv/**", "target/**"]

[tool.poe.tasks]
# ── Formatting ─────────────────────────────────────────────────────────────
[tool.poe.tasks.format]
help = "Auto-format Python sources with ruff"
cmd = "ruff format python tests"

[tool.poe.tasks.format-check]
help = "Check Python formatting without making changes"
cmd = "ruff format --check python tests"

[tool.poe.tasks.python-format-check-hook]
help = "Hook-friendly Python format check with fix guidance"
shell = "ruff format --check python tests || { echo; echo \"Python formatting issues found in the staged snapshot.\"; echo \"Run: uv run --group dev poe format\"; echo \"Then restage the changes: git add -u python tests\"; exit 1; }"

# ── Linting ────────────────────────────────────────────────────────────────
[tool.poe.tasks.ruff-check]
help = "Lint Python sources with ruff"
cmd = "ruff check python tests"

[tool.poe.tasks.ruff-fix]
help = "Lint and auto-fix Python sources with ruff"
cmd = "ruff check --fix python tests"

[tool.poe.tasks.ty-check]
help = "Type-check Python sources with ty"
cmd = "ty check python tests"

[tool.poe.tasks.lint]
help = "Run manifest validation and Python linters"
sequence = ["manifests-check", "ruff-check", "ty-check"]

# ── Testing ────────────────────────────────────────────────────────────────
[tool.poe.tasks.pytest]
help = "Run the Python test suite"
cmd = "python -m pytest"

[tool.poe.tasks.pytest-verbose]
help = "Run the Python test suite with verbose output"
cmd = "python -m pytest -v"

[tool.poe.tasks.rust-test]
help = "Run the Rust workspace test suite"
cmd = "cargo test --workspace"

[tool.poe.tasks.rust-test-verbose]
help = "Run the Rust workspace tests with captured output"
cmd = "cargo test --workspace -- --nocapture"

[tool.poe.tasks.smoke]
help = "Quick smoke test: run cpm --help"
cmd = "cpm --help"

[tool.poe.tasks.smoke-awesome-copilot]
help = "Network-backed smoke test against github/awesome-copilot"
cmd = "bash scripts/smoke-awesome-copilot.sh"

[tool.poe.tasks.test]
help = "Run all tests (Python + Rust + smoke)"
sequence = ["pytest", "rust-test", "smoke"]

[tool.poe.tasks.manifests-check]
help = "Validate checked-in TOML manifests"
cmd = "python scripts/check_committed_toml.py"

# ── Build ──────────────────────────────────────────────────────────────────
[tool.poe.tasks.rust-build]
help = "Build the Rust workspace (debug)"
cmd = "cargo build --workspace"

[tool.poe.tasks.rust-build-release]
help = "Build the Rust workspace (release)"
cmd = "cargo build --workspace --release"

[tool.poe.tasks.rust-fmt]
help = "Format Rust sources with rustfmt"
cmd = "cargo fmt --all"

[tool.poe.tasks.rust-fmt-check]
help = "Check Rust formatting without making changes"
cmd = "cargo fmt --all -- --check"

[tool.poe.tasks.rust-fmt-check-hook]
help = "Hook-friendly Rust format check with fix guidance"
shell = "cargo fmt --all -- --check || { echo; echo \"Rust formatting issues found in the staged snapshot.\"; echo \"Run: uv run --group dev poe rust-fmt\"; echo \"Then restage the changes: git add -u crates\"; exit 1; }"

[tool.poe.tasks.rust-clippy]
help = "Run clippy lints on the Rust workspace"
cmd = "cargo clippy --workspace -- -D warnings"

# ── CI pipeline ────────────────────────────────────────────────────────────
[tool.poe.tasks.ci]
help = "Full CI pipeline: lint → test → build"
sequence = ["lint", "test", "rust-build"]

[tool.poe.tasks.ci-full]
help = "Full CI pipeline with release build and formatting checks"
sequence = [
  "format-check",
  "rust-fmt-check",
  "lint",
  "rust-clippy",
  "test",
  "rust-build-release",
]

[tool.poe.tasks.hooks-check]
help = "Run the committed lefthook pre-commit pipeline"
cmd = "lefthook run pre-commit --all-files"

# ── Release helpers ───────────────────────────────────────────────────────
[tool.poe.tasks.bump_version]
help = "Bump version metadata, refresh uv.lock, and create a release branch"
cmd = "python scripts/bump_version.py"

[tool.poe.tasks.bump_patch]
help = "Create a patch release version bump"
cmd = "python scripts/bump_version.py patch"

[tool.poe.tasks.bump_minor]
help = "Create a minor release version bump"
cmd = "python scripts/bump_version.py minor"

[tool.poe.tasks.bump_major]
help = "Create a major release version bump"
cmd = "python scripts/bump_version.py major"

[tool.poe.tasks.bump_no_changelog]
help = "Create a patch version bump without editing the changelog"
cmd = "python scripts/bump_version.py patch --no-changelog"

[tool.poe.tasks.changelog_preview]
help = "Preview the next patch changelog and version bump without writing files"
cmd = "python scripts/bump_version.py patch --dry-run"

[tool.poe.tasks.branch_new]
help = "Create a new branch using the project naming workflow"
cmd = "python scripts/branch.py new"

[tool.poe.tasks.branch_feat]
help = "Create a feature branch"
cmd = "python scripts/branch.py new feat"

[tool.poe.tasks.branch_fix]
help = "Create a bugfix branch"
cmd = "python scripts/branch.py new fix"

[tool.poe.tasks.branch_chore]
help = "Create a chore branch"
cmd = "python scripts/branch.py new chore"

[tool.poe.tasks.branch_docs]
help = "Create a documentation branch"
cmd = "python scripts/branch.py new docs"

[tool.poe.tasks.branch_refactor]
help = "Create a refactor branch"
cmd = "python scripts/branch.py new refactor"

[tool.poe.tasks.branch_test]
help = "Create a testing-focused branch"
cmd = "python scripts/branch.py new test"

[tool.poe.tasks.branch_ci]
help = "Create a CI branch"
cmd = "python scripts/branch.py new ci"

[tool.poe.tasks.branch_perf]
help = "Create a performance branch"
cmd = "python scripts/branch.py new perf"

[tool.poe.tasks.branch_style]
help = "Create a style-only branch"
cmd = "python scripts/branch.py new style"

[tool.poe.tasks.branch_build]
help = "Create a build-system branch"
cmd = "python scripts/branch.py new build"

[tool.poe.tasks.branch_rescue]
help = "Recover or realign the current branch using the rescue workflow"
cmd = "python scripts/branch.py rescue"

# ── Utilities ──────────────────────────────────────────────────────────────
[tool.poe.tasks.toml-format]
help = "Run tombi to format all TOML files"
cmd = "tombi format"

[tool.poe.tasks.toml-lint]
help = "Run tombi to lint all TOML files"
cmd = "tombi lint"

[tool.poe.tasks.clean]
help = "Remove build artefacts (target/ and __pycache__)"
shell = "cargo clean && find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null; echo done"
